--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
 /* font-family: 'Lexend Deca', sans-serif; */
 /* font-family: 'Inter', sans-serif; */
 
-
 /* Universal Selector */
 *{
     margin: 0px;
     padding: 0px;
 }
 
-
+/* Body Design CSS Code */
 body{
     width: 1440px;
     margin: auto;
@@ -22,6 +21,7 @@ main{
     margin-top: 140px;
 }
 
+/* Inner Main Container Card Design CSS Code */
 .card{
     display: flex;
     width: 1100px;
@@ -30,6 +30,7 @@ main{
     background-color: hsl(244, 38%, 16%);
 }
 
+/* Card ImageColor CSS Code */
 .card .imgcolor{
     border-bottom-right-radius: 12px;
     border-top-right-radius: 12px;
@@ -40,6 +41,7 @@ main{
     padding: 80px;
 }
 
+/* Content h1 tag CSS Code */
 .content h1{
     font-size: 2.1rem;
     font-family: 'Inter', sans-serif;
@@ -50,6 +52,7 @@ main{
     color: hsl(277, 64%, 61%);
 }
 
+/* Content p tag CSS Code */
 .content p{
     color: hsla(0, 0%, 100%, 0.75);
     font-size: 15px;
@@ -69,6 +72,7 @@ main{
     margin-right: 60px;
 }
 
+/* Stats Div Container CSS Code */
 .stats div{
     font-family: 'Inter', sans-serif;
     font-size: 1.4rem;
@@ -76,13 +80,13 @@ main{
     color: hsl(0, 0%, 100%);
 }
 
+/* Stats name CSS Code */
 .stats .name{
     color: hsla(0, 0%, 100%, 0.6);
     font-weight: normal;
     font-size: 13px;
     font-family: 'Lexend Deca', sans-serif;
 }
-
 
 /* card img css code and box css code */
 .card .mainpic{
@@ -93,6 +97,7 @@ main{
     border-top-right-radius: 12px;
 }
 
+/* Image Color CSS Code */
 .card .overlay{
     height: 100%;
     width: 100%;
@@ -102,20 +107,26 @@ main{
     border-top-right-radius: 12px;
 }
 
-
-/* footer attribution css code */
+/* footer css code */
 footer{
     font-size: 1.2rem;
     color: white;
     margin-top: 30px;
     padding: 20px;
+    text-align: center;
 }
 
+/* Footer anchor tag CSS Code */
 footer a{
-    text-decoration: none;
     color: yellow;
+    cursor: pointer;
 }
 
+/* Footer anchor tag Hove effect CSS Code */
+footer a:hover{
+    text-decoration: none;
+    color: red;
+}
 
 /* Responsive design css code */
 @media screen and (max-width: 1500px) {
@@ -127,6 +138,8 @@ footer a{
 @media screen and (max-width: 1170px) {
     main{
         padding: 40px;
+        margin-top: 0px;
+        transition: 0.3s;
     }
 
     .card .mainpic{
