add the profile links in html file & update the footer css code

--- a/style.css
+++ b/style.css
@@ -113,6 +113,8 @@ footer{
     color: white;
     margin-top: 30px;
     padding: 20px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
     text-align: center;
 }
 
